--- a/style.css
+++ b/style.css
@@ -8,10 +8,13 @@ body{
     max-width:100%;
     background: black;
     color:white;
+    max-width:100vw;
+    max-height: 100vh;
 }
 
 .container{
     max-width:100vw;
+    max-height: 100vh;
     display:flex;
     justify-content:left;
     align-items: center;
@@ -65,14 +68,6 @@ body{
 
 .right:hover{
     scroll-behavior: smooth;
-}
-.offers{
-    position: absolute;
-    bottom: 0;
-    margin-top:10px;
-    width:100%;
-    height:50px;
-    background:linear-gradient(90deg,#9E58B6,#7939F0)
 }
 .dDJltW{
     margin-top:2.5%;
@@ -311,7 +306,7 @@ a{
 .topContent{
     display: flex;
     align-items: center;
-    gap:75%
+    gap:75%;
 }
 
 .show{
@@ -557,11 +552,186 @@ li{
     left:100px;
 }
 
-@keyframes timecircle {
-    0%{
-        left:0%;
-    }
-    100%{
-        left:100%;
-    }
+
+.volume{
+    height:3px;
+    width:70%;
+    background-color: white;
+    position: relative;
+    top:10px;
+    left:5px;
+    cursor:pointer;
+}
+.hold svg{
+    cursor: pointer;
+}
+.hold{
+    position: absolute;
+    top:35%;
+    right:3%;
+    display: flex;
+    width:15%;
+    height:30%;
+}
+#volume{
+    position: relative;
+    left:100%;
+}
+.menu{
+    display: none;
+}
+.collapse{
+    display: none;
+}
+@media (max-width:426px) and (min-width:320px) {
+        .left .top{
+            height:135px;
+            border-bottom-right-radius: 0;
+            margin-left: 0;
+            padding: 3px;
+        }
+        .top .collapse{
+            margin: 0;
+            padding:5px;
+        }
+        .bottom{
+            display: none;
+        }
+        .collpase img{
+            height:20px;
+            width:20px;
+        }
+        .left{
+            position: absolute;
+            width:95vw;
+            height:90vh;
+            left:-125%;
+            z-index: 50;
+            top:0;
+            margin-top:0;
+        }
+        #spot{
+            display: none;
+        }
+        .bot{
+            border-top-right-radius: 0;
+            height:60vh;
+            margin-top: 0;
+        }
+        .signin{
+            display: none;
+        }
+        .playlist{
+            height:53vh;
+        }
+        .right{
+            left: 3px;
+            margin: 0;
+            width:100%;
+            position: absolute;
+            top:3px;
+            height:85vh;
+        }
+        .play{
+            margin-left:0;
+            gap:3.5px;
+            
+        }
+        .plays{
+            font-size: 12px;
+            width:75px;
+            margin-top: 0;
+        }
+        .bot .list{
+            width: 275px;
+        }
+        .seekbar{
+            top:95%;
+            width:90%;
+            left:5%;
+        }
+        .songtime{
+            display: none;
+        }
+        .playbar{
+            height:8vh;
+            position: absolute;
+            bottom:5px;
+        }
+        .songname{
+            position: absolute;
+            width:45%;
+            font-size:11px;
+        }
+        .hold{
+            display: none;
+        }
+        .songinfo{
+            height:100%;
+            width:200px;
+            position: absolute;
+            bottom:15%;
+        }
+        .socials{
+            display: none;
+        }
+        .cardContainer{
+            width:100%;
+            gap:10px;
+        }
+        .card{
+            width:85px;
+            height: 150px;
+            margin:0;
+        }
+        .card h3{
+            font-size:16px;
+        }
+
+        .topContent{
+            gap:10%;
+        }
+        .buttons{
+            display: none;
+        }
+        .menu{
+            display: block;
+            width:30px;
+            height:40px;
+        }
+        .log{
+            margin-left: 60px;
+        }
+        .login{
+            height:30px;
+            width:80px;
+        }
+        .login:hover{
+            height:35px;
+        }
+        .menu img{
+            width:100%;
+            height:100%;
+        }
+        .collapse{
+            display: block;
+            width:30px;
+            height:40px;
+            margin-left: 20px;
+            margin-top:5px;
+        }
+        .collapse img{
+            width:100%;
+            height:100%;
+        }
+        .footer{
+            display: none;
+        }
+        #prev,#next,#play{
+            z-index:15;
+        }
+        .playbuttons{
+            margin-left: 200px;
+        }
+        
 }
